--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #a3a1a1;
+    background-color: #D9D9D9;
 
 
 
@@ -12,7 +12,7 @@ body {
 header {
     background-color: #069696;
     color: #FFFFFF;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,19 +50,51 @@ ul li a:hover {
 
 /* End Header  */
 
+/*  Start responsive header  */
+@media only screen and (max-width:768px) {
+
+    header {
+        width: 100%;
+        display: flex;
+        padding: 0px;
+        box-shadow: 0px 5px 2px rgb(46, 46, 46);
+
+    }
+
+    .nav-h {
+        margin-left: 15px;
+    }
+
+    ul li {
+        padding: 5px 0;
+        margin-top: 20px;
+        margin-bottom: 15px;
+        margin-right: 8px;
+    }
+
+}
+
+/* End Responsive Header  */
+
+
 /* Start Top Body  */
 .top-body {
     background-color: #069696;
-    width: 100%;
+    height: 550px;
     margin-top: 5px;
     border-radius: 0 0 0 200px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    padding: 0 10%;
+
 }
 
 .content {
-    text-align: center;
     color: #FFFFFF;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
@@ -74,17 +106,15 @@ ul li a:hover {
     font-size: 64px;
     font-weight: 400;
     line-height: 68px;
-    margin-top: 150px;
-    margin-left: 200px;
+    margin: 0;
+
 }
 
 .content p {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 40%;
+
+
     font-size: 20px;
     font-weight: 400;
-    margin-left: 260px;
-    margin-top: 20px;
 
 }
 
@@ -92,21 +122,18 @@ ul li a:hover {
     width: 40%;
     font-size: 28px;
     font-weight: 700;
-    margin-left: 150px;
-    margin-top: 20px;
+
 }
 
 .icon {
     width: 40%;
     font-size: 28px;
     font-weight: 700;
-    margin-left: 150px;
-    margin-top: 20px;
-    margin-bottom: 150px;
+
 }
 
 .icon a {
-    margin-left: 15px;
+
     color: black;
     transition: all 0.3s ease 0s;
 }
@@ -117,27 +144,29 @@ ul li a:hover {
     border-radius: 20px;
 }
 
-.image img {
-    width: 600px;
-    height: 560px;
-    margin-top: 135px;
-    margin-bottom: 0;
-    padding-bottom: 0;
+.image {
+    display: flex;
+    justify-content: center;
+    width: 0%;
+
 
 }
 
 /* End Top Body  */
+/* Start Responsive Top-Body  */
+@media only screen and (max-width:768px) {}
+
+/* End Responsive Top-Body  */
+
+/* start M-P Part  */
 .M-P {
     margin-top: 100px;
     margin-left: 150px;
 
-
-
-
 }
 
 .website {
-    background-color: #dba3a3;
+    background-color: #F6F6F6;
     border-radius: 20px;
     width: 1200px;
     height: 400px;
@@ -155,6 +184,10 @@ ul li a:hover {
 
 .web-content {
     margin: 40px;
+    margin-top: 3px;
+    display: flex;
+    flex-direction: column;
+    width: 43%;
 
 }
 
@@ -167,14 +200,175 @@ ul li a:hover {
 .web-content p {
     font-size: 20px;
     margin-left: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+}
+
+.angcor {
+    display: flex;
 }
 
 .angcor a {
     background-color: #069696;
+    text-align: center;
     width: 60px;
     height: 20px;
-    margin-left: 60px;
+    margin-left: 15px;
     padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.angcor a:hover {
+    background-color: #efd513;
+}
+
+.bottom-link {
+    display: flex;
+    justify-content: center;
+
+}
+
+.bottom-link a {
+    background-color: #069696;
+    padding: 10px 20px;
+    font-size: 32px;
+    border-radius: 20px;
+}
+
+.bottom-link a:hover {
+    background-color: #efd513;
+}
+
+/* End M-P Part  */
+
+
+/* start About Part  */
+
+.about {
+    background-color: #F6F6F6;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    padding: 2% 5%;
+    margin-top: 65px;
+    border-radius: 0px 150px 0px 0px;
+}
+
+.about-content {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+}
+
+.about-self {
+    color: #323030;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.about-self h1 {
+    font-size: 32px;
+}
+
+.about-self p {
+    width: 450px;
+}
+
+.about-self h2 {
+    font-size: 20px;
+}
+
+.about-self .icon {
+    width: 40%;
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.about-self .icon a {
+
+    color: rgb(39, 39, 39);
+    transition: all 0.3s ease 0s;
+}
+
+.about-self .icon a:hover {
+    color: #069696;
+
+}
+
+.skills {
+    color: #323030;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.skill-1 {
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+}
+
+.skill-icon {
+    display: flex;
+    gap: 90px;
+}
+
+.skill-font {
+    margin-top: 30px;
+}
+
+/* End About Part  */
+
+
+/* Start Bottom part  */
+.bottom-part {
+    background-color: #069696;
+    border-radius: 200px 0 0 0;
+    margin-top: -200px;
+    height: 500px;
+
+}
+
+.bottom-part h2 {
+    font-size: 30px;
+    color: #FFFFFF;
+    padding: 30px;
+}
+
+.bottom-part p {
+    color: #FFFFFF;
+    font-size: 20px;
+    width: 540px;
+}
+
+.bottom-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+
+}
+
+.button {
+    padding: 8px 10px;
+    border-radius: 5px;
+}
+
+.inputs input,
+text,
+textarea {
+    padding: 10px;
     border-radius: 10px;
 }
